--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     </p>
 
     <button
-      onclick="document.getElementById('myImage').src='src/pic_bulbon.gif'"
+      onclick="document.getElementById('myImage').src='../src/pic_bulbon.gif'"
     >
       Turn on the light
     </button>
 
-    <img id="myImage" src="src/pic_bulboff.gif" style="width: 100px;" />
+    <img id="myImage" src="../src/pic_bulboff.gif" style="width: 100px;" />
 
     <button
-      onclick="document.getElementById('myImage').src='src/pic_bulboff.gif'"
+      onclick="document.getElementById('myImage').src='../src/pic_bulboff.gif'"
     >
       Turn off the light
     </button>
